--- a/src/main/resources/templates/contatos.html
+++ b/src/main/resources/templates/contatos.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
-<html
-    xmlns="http://www.thymeleaf.org"
-    lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Contatos</title>
+
+
+
 </head>
+
 <body>
+
+    <div class="container" style="margin-top: 50px">
+        <div class="row">
+            <div class="col-6">
+                <!--Inicio da tabela-->
+                <table>
+                    <tr th:each="contatos : ${contatos}">
+                        <th th:text="${contatos.id}"></th>
+                        <th th:text="${contatos.nome}"></th>
+                        <th th:text="${contatos.fone}"></th>
+                    </tr>
+                </table>
+            </div>
+            <!-- final da tabela -->
+
+            <div class="col-6">
+
+
+            </div>
+        </div>
+    </div>
+
+
+ 
+
     
-    <table border="1">
-        <tr th:each="contatos : ${contatos}">
-            <th th:text="${contatos.id}"></th>
-            <th th:text="${contatos.nome}"></th>
-            <th th:text="${contatos.fone}"></th>
-        </tr>
-    </table>
 
 
 </body>
+
 </html>
