--- a/src/main/resources/templates/contatos.html
+++ b/src/main/resources/templates/contatos.html
@@ -2,20 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
-
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <title>Contatos</title>
-
-
-
+    <link rel="stylesheet" th:href="@{/css/fontawesome.css}">
+    <link rel="stylesheet" th:href=@{/css/bootstrap.css}>
+    
 </head>
 
 <body>
@@ -28,15 +22,18 @@
 
 
             <div class="col-6">
+
                 <!--Inicio da tabela-->
                 <table class="table table-striped">
 
                     <thead>
+
                         <tr>
                             <th>#</th>
                             <th>Nome</th>
                             <th>Fone</th>
                         </tr>
+
                     </thead>
 
                     <tbody>
@@ -47,18 +44,18 @@
                         </tr>
                     </tbody>
 
-
                 </table>
                 <!-- final da tabela -->
+
             </div>
         </div>
     </div>
 
 
-
-
-
-
+<script src="@{/js/jquery.js}"></script>
+<script src="@{/js/jquery.js}"></script>
+<script src="@{/js/jquery.js}"></script>
+<script src="@{/js/jquery.js}"></script>
 
 </body>
 
