--- a/src/main/resources/templates/contatos.html
+++ b/src/main/resources/templates/contatos.html
@@ -2,28 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contatos</title>
     <link rel="stylesheet" th:href="@{/css/fontawesome.css}">
-    <link rel="stylesheet" th:href=@{/css/bootstrap.css}>
-    
-</head>
-
-<body>
+    <link rel="stylesheet" th:href=@{/css/bootstrap.css}> </head> <body>
 
     <div class="container" style="margin-top: 50px">
         <div class="row">
+            <!--Inicio da tabela FORMULARIO-->
             <div class="col-6">
 
             </div>
 
-
+            <!-- final da tabela FORMULARIO-->
             <div class="col-6">
 
-                <!--Inicio da tabela-->
+                <!--Inicio da tabela -->
                 <table class="table table-striped">
 
                     <thead>
@@ -52,11 +49,11 @@
     </div>
 
 
-<script src="@{/js/jquery.js}"></script>
-<script src="@{/js/jquery.js}"></script>
-<script src="@{/js/jquery.js}"></script>
-<script src="@{/js/jquery.js}"></script>
+    <script src="@{/js/jquery.js}"></script>
+    <script src="@{/js/jquery.js}"></script>
+    <script src="@{/js/jquery.js}"></script>
+    <script src="@{/js/jquery.js}"></script>
 
-</body>
+    </body>
 
 </html>
