--- a/src/main/resources/templates/contatos.html
+++ b/src/main/resources/templates/contatos.html
@@ -8,51 +8,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contatos</title>
     <link rel="stylesheet" th:href="@{/css/fontawesome.css}">
-    <link rel="stylesheet" th:href=@{/css/bootstrap.css}> 
-</head> 
-
-<body>
+    <link rel="stylesheet" th:href=@{/css/bootstrap.css}> </head> <body>
 
     <div class="container" style="margin-top: 50px">
         <div class="row">
-         <!--Inicio da tabela FORMULARIO-->
+            <!--Inicio da tabela FORMULARIO-->
             <div class="col-6">
 
-                    <form method="post" th:object="${contato}" th:action="@{/contatos}">
-                        <div class="form-group">
-                                <label for="nome">Nome</label>
-                                <input type="text" id="nome" class="form-control">
+                <form method="post" th:object="${contato}" th:action="@{/contatos}">
+
+                    <div class="form-group">
+                        <label for="nome">Nome</label>
+                        <input type="text" id="nome" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="fone">Telefone</label>
+                        <input type="text" id="fone" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <div class="row">
+
+                            <div class="col-6">
+                                <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-save"></i>
+                                    Salvar</button>
                             </div>
 
-
-
-
-
-                            
-                        </form>
-
-
-                
-
-                <div class="form-group">
-                    <label for="fone">Telefone</label>
-                    <input type="text" id="fone" class="form-control">
-                </div>
-
-                <div class="form-group">
-                    <div class="row">
-
-                        <div class="col-6">
-                            <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-save"></i>
-                                Salvar</button>
-                        </div>
-
-                        <div class="col-6">
-                            <button type="reset" class="btn btn-danger btn-block"><i class="fas fa-trash"></i>
-                                Limpar</button>
+                            <div class="col-6">
+                                <button type="reset" class="btn btn-danger btn-block"><i class="fas fa-trash"></i>
+                                    Limpar</button>
+                            </div>
                         </div>
                     </div>
-                </div>
+
+                </form>
+
             </div>
 
             <!-- final da tabela FORMULARIO-->
