--- a/src/main/resources/templates/contatos.html
+++ b/src/main/resources/templates/contatos.html
@@ -12,19 +12,17 @@
 
     <div class="container" style="margin-top: 50px">
         <div class="row">
-            <!--Inicio da tabela FORMULARIO-->
             <div class="col-6">
-
                 <form method="post" th:object="${contato}" th:action="@{/contatos}">
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input type="text" id="nome" class="form-control">
+                        <input type="text" id="nome" th:field="*{nome}" class="form-control">
                     </div>
 
                     <div class="form-group">
                         <label for="fone">Telefone</label>
-                        <input type="text" id="fone" class="form-control">
+                        <input type="text" id="fone" th:field="*{fone}" class="form-control">
                     </div>
                     <div class="form-group">
                         <div class="row">
@@ -40,9 +38,7 @@
                             </div>
                         </div>
                     </div>
-
                 </form>
-
             </div>
 
             <!-- final da tabela FORMULARIO-->
