adcionado os boões de excluir e deletar

--- a/src/main/resources/templates/contatos.html
+++ b/src/main/resources/templates/contatos.html
@@ -53,6 +53,7 @@
                             <th>#</th>
                             <th>Nome</th>
                             <th>Fone</th>
+                            <th colspan="2" style="text-align:center">Ação</th>
                         </tr>
 
                     </thead>
@@ -62,6 +63,9 @@
                             <th th:text="${contatos.id}"></th>
                             <th th:text="${contatos.nome}"></th>
                             <th th:text="${contatos.fone}"></th>
+                            <th><button type="button" class="btn btn-info"><i class="fas fa-edit"></i></button></th>
+                            <th><button type="button" class="btn btn-danger"><i class="fas fa-trash"></button></th>
+
                         </tr>
                     </tbody>
 
